# Krinon

./: .gitmodules  LICENSE  README.md
scripts/: run_aligner_human.sh  run_aligner_mouse.sh  run_aligner_small.sh  run_star_human.sh  run_star_mouse.sh
src/: CMakeLists.txt  Readme.md  config.yaml  main.cpp
src/genome/: Genome.cpp  Genome.h  GenomeIndex.cpp  GenomeIndex.h  GenomeIndexPrefix.cpp  GenomeIndexPrefix.h  KMerBuilder.h  SJDB.cpp  SJDB.h  SuffixArray.cpp  SuffixArray.h  SuffixAutomatonKMerBuilder.cpp  SuffixAutomatonKMerBuilder.h  WindowScanningKMerBuilder.cpp  WindowScanningKMerBuilder.h
src/genomeRefactored/: Genome.cpp  Genome.h  GenomeIndex.h  GenomeIndex_build.cpp  GenomeIndex_find.cpp  SJDB.cpp  SJDB.h  SuffixArray.cpp  SuffixArray.h  SuffixArrayKMerMap.cpp  SuffixArrayKMerMap.h  SuffixArray_build_SAIS.cpp
src/io/: LoadReadFile.h  MemoryMappedFile.hpp  OutputSAM.h  OutputSJ.h  Parameters.cpp  Parameters.h
src/log/: ErrorRecord.cpp  ErrorRecord.h  OutputFinalReport.h  TimeReport.h  log.h
src/readAlign/: ReadAlignMultiThread.cpp  ReadAlignMultiThread.h  ReadAligner.cpp  ReadAligner.h  ReadFile.cpp  ReadFile.h  SeedMapping.cpp  SeedMapping.h  Stitching.cpp  Stitching.h  StitchingManagement.cpp  StitchingManagement.h  StitchingUtils.h  StitchingWindow.h  Transcript.h
src/readAlignRefactored/: Read.h  SeedMapping.cpp  SeedMapping.h  Stitching.cpp  Stitching.h  Transcript.h
src/test/: TestPackedArray.h
src/utils/: MemoryMappedFile.hpp  PackedArray.cpp  PackedArray.h  PackedIndexArray.cpp  PackedIndexArray.h  Parameters.cpp  Parameters.h  atomic_generation.hpp  defines.h  exceptions.h  memory_mapped_output.hpp  types.h  utils.h
src/utilsRefactored/: PackedArray.cpp  PackedArray.h  PackedArrayMult.h  defines.h  seqFunctions.cpp  seqFunctions.h  timeFunctions.hpp
